# studio

./: index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: copilot-instructions.md
src/: App.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/project/: empty.tsx  studio.tsx
src/components/settings/: settings-dialog.tsx
src/components/sidebar/: app-sidebar-content.tsx  app-sidebar-footer.tsx  app-sidebar-header.tsx  app-sidebar.tsx
src/components/ui/: breadcrumb.tsx  dialog.tsx  sidebar.tsx
src/hook/: useProjectPicker.ts  useSettings.ts
src/hooks/: useProjectPicker.ts  useSettings.ts
src/routes/: __root.tsx  index.tsx
